# beta-feedback-platform

./: .env.example  .gitignore  API_CONVENTIONS.md  ARCHITECTURE.md  DATA_MODEL_DRAFT.md  DUAL_ROLE_TEST_PLAN.md  LOCAL_DEMO_SEED.md  MANUAL_QA.md  NEXT_PHASE_PLAN.md  OPS_RUNBOOK.md  PRD.md  PUBLIC_BETA_LAUNCH_CHECKLIST.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260410_000001_initial_schema.py  20260412_000002_task_resolution_baseline.py  20260412_000003_activity_events_baseline.py  20260427_000004_account_roles_baseline.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/common/: __init__.py  exceptions.py  responses.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  base.py  entities.py  migrations.py  session.py
backend/tests/: conftest.py  test_accounts_api.py  test_auth_api.py  test_campaigns_api.py  test_device_profiles_api.py  test_eligibility_api.py  test_feedback_api.py  test_health.py  test_participation_requests_api.py  test_persistence_baseline.py  test_projects_api.py  test_reputation_api.py  test_safety_api.py  test_tasks_api.py
backend/tests/service/: test_accounts_service.py  test_auth_service.py  test_campaigns_service.py  test_device_profiles_service.py  test_dual_role_capabilities_service.py  test_eligibility_service.py  test_feedback_service.py  test_participation_requests_service.py  test_projects_service.py  test_reputation_service.py  test_safety_service.py  test_tasks_service.py
frontend/: .gitignore  (+4 more)
(+309 files in other folders)
