[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beta-feedback-platform-backend"
version = "0.1.0"
description = "Backend service for beta-feedback-platform"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic-settings==2.8.1",
  "sqlalchemy==2.0.40",
  "psycopg[binary]==3.2.6",
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pytest==8.3.5",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
